working, open issues not calculating properly

--- a/views/pages/result.ejs
+++ b/views/pages/result.ejs
@@ -4,12 +4,13 @@
 </head>
 <body class="container">
 
-<h1><% user %> - <% repo %></h1>
+<h1><%= user %> - <%= repo %></h1>
 
 <div>
-  <h1>Issues: </h1>
+  <h3>Last 24 hours: <%= issues24h.length %></h3>
+  <h3>Last 7 Days: <%= issues7d.length %></h3>
+  <h3>Older: <%= issuesO.length %></h3>
   <br/>
-  <% JSON.stringify(issues) %>
 </div>
 
 </body>
