--- a/views/pages/error.ejs
+++ b/views/pages/error.ejs
@@ -5,7 +5,7 @@
 <body class="container">
 
     <div class="ui ten column centered grid">
-      <h1><% error %></h1>
+      <h1><%= error %></h1>
     </div>
 
 </body>
